<resources>
    <string name="app_name">Philip Diary</string>
    <string name="welcome">Welcome,</string>

    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="sign_up">Đăng ký</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="name">Phúc Nguyễn</string>
    <string name="view_profile">Xem trang cá nhân của bạn</string>
    <string name="title">Thêm vào bài viết của bạn</string>
    <string name="write_comment">Viết bình luận</string>
    <string name="like">Thích</string>
    <string name="comment">Bình luận</string>
    <string name="share">Chia sẻ</string>
    <string name="time">3:25 PM</string>
    <string name="slogan">Sự nghiệp chưa thành làm sao dám nghĩ đến nữ nhân. Hãy cố găng học hành thành tài đi.</string>
    <string name="add_post">Thêm tin</string>
    <string name="friend">Bạn bè</string>
    <string name="search_friend">Tìm bạn bè</string>
    <string name="data_friend">Friend One</string>
    <string name="status">Bạn đang nghĩ gì ?</string>
    <string name="up_post">Đăng</string>
    <string name="create_post">Tạo bài viết</string>
    <string name="cancel">Hủy</string>
    <string name="list_friend">111 người bạn</string>
    <string name="view_all_friend">Xem tất cả bạn bè</string>
    <string name="post">Add to post</string>
    <string name="hint">Bạn đang nghĩ gì ?</string>
    <string name="text">Bằng cách nhấn vào Đăng ký, bạn đồng ý với điều khoản, chính sách dữ liệu và chính sách cookie của chúng tôi.
    Bạn có thể nhận được thông báo của chúng tôi qua SMS và chọn không nhận bất cứ lúc nào.</string>
    <string name="save_post">Lưu bài viết</string>
    <string name="title_save_post">Thêm vào danh sách các mục đã lưu.</string>
    <string name="edit_post">Chỉnh sửa bài viết</string>
    <string name="delete">Xóa</string>
    <string name="off_notification">Tắt thông báo cho bài viết này.</string>
    <string name="image_video">Ảnh / Video</string>
    <string name="feeling">Cảm xúc/Hoat động</string>
    <string name="check_in">Check in</string>
    <string name="camera">Máy ảnh</string>
    <string name="file_GIF">Flie GIF</string>
    <string name="background">Hình nền</string>
    <string name="status_public">Công khai</string>
    <string name="album">Album</string>

    <string name="group">Nhóm</string>
    <string name="create_group">Tạo nhóm</string>
    <string name="your_group">Nhóm của bạn</string>
    <string name="search_group">Tìm kiếm nhóm</string>
    <string name="discover">Khám phá</string>


    <string name="name_group">57K1 Công Nghệ Thông Tin Vinh University</string>
    <string name="input_email">Nhập email...</string>
    <string name="input_password">Nhập mật khẩu...</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="button_continue">Tiếp tục</string>
    <string name="developer">Powered by Philip Studio</string>
    <string name="menu">Menu</string>
    <string name="event">Sự kiện</string>
    <string name="save">Đã lưu</string>
    <string name="signout">Đăng xuất</string>
    <string name="watch">Watch</string>
    <string name="detail">Chi tiết</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="image_avatar">Ảnh đại diện</string>
    <string name="image_background">Ảnh bìa</string>
    <string name="choose_multi_image">Chọn nhiều ảnh</string>
    <string name="setting">Cài đặt</string>
    <string name="notification_invitefriend">Bạn hiện đang có lời mời kết bạn</string>
    <string name="description">Là một lời mời kết bạn từ một người khác trong ứng dụng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
