<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:textSize="30sp"
                        android:text="@string/welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="18sp"
                        android:text="Sign in to continue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <TextView
                    android:onClick="moveToSignUpActivity"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23sp"
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text= "@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:hint="Nhập email hoặc số diện thoại"
                    android:id="@+id/edittext_input_email"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:hint="Nhập mật khẩu"
                    android:id="@+id/edittext_input_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="end"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/button_sign_in"
                    android:textColor="#fff"
                    android:background="@drawable/custom_button_sign_in"
                    android:layout_marginTop="15dp"
                    android:text="@string/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:text="----------- OR -----------"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.gms.common.SignInButton
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:text="@string/developer"
        android:textAlignment="center"
        android:textSize="18sp" />
</LinearLayout>