<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:elevation="10dp"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_background"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <LinearLayout
        android:background="@drawable/custom_background_bottom_sheet"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/custom_background_view" />

        <TextView
            android:id="@+id/textview_image_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:drawableStart="@drawable/icon_photo_library"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/image_video"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#858484" />

        <TextView
            android:id="@+id/textview_feeling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:drawableStart="@drawable/icon_insert_emoticon"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/feeling"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#858484" />

        <TextView
            android:id="@+id/textview_check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:drawableStart="@drawable/icon_location_on"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/check_in"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#858484" />


        <TextView
            android:id="@+id/textview_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:drawableStart="@drawable/icon_photo_camera"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/camera"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#858484" />

        <TextView
            android:id="@+id/textview_gif"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:drawableStart="@drawable/icon_gif"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/file_GIF"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#858484" />

        <TextView
            android:id="@+id/textview_background"
            android:textAlignment="center"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:drawableStart="@drawable/icon_background"
            android:drawablePadding="10dp"
            android:text="@string/background"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#858484" />
    </LinearLayout>
</LinearLayout>