<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:onClick="comeBackMainActivity"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/create_post"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_create_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/up_post"
                    android:textAlignment="center"
                    android:textColor="@color/color"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="30dp">

                        <ImageView
                            android:contentDescription="@string/app_name"
                            android:id="@+id/imageview_avatar_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textview_nickname_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/name"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Button
                                style="?android:attr/buttonBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:background="@drawable/custom_button"
                                android:drawableStart="@drawable/icon_public"
                                android:drawableEnd="@drawable/icon_arrow_drop_down"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:text="@string/status_public"
                                android:textAllCaps="false" />

                            <Button
                                style="?android:attr/buttonBarStyle"
                                android:id="@+id/button_album"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:layout_marginStart="10dp"
                                android:background="@drawable/custom_button"
                                android:drawableStart="@drawable/icon_add"
                                android:drawableEnd="@drawable/icon_arrow_drop_down"
                                android:padding="5dp"
                                android:text="@string/album"
                                android:textAllCaps="false" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <EditText
                    android:inputType="text"
                    android:autofillHints="@string/app_name"
                    android:id="@+id/edittext_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:hint="@string/hint" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <include
                        android:id="@+id/layout_post_image_shared"
                        layout="@layout/item_post_image_shared" />

                    <include
                        android:id="@+id/layout_post_text_shared"
                        layout="@layout/item_post_text_shared" />
                </FrameLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/custom_background_bottom_sheet"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textview_add_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:lineSpacingExtra="5dp"
            android:text="@string/title"
            android:textSize="20sp" />

        <ImageButton
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/icon_image1" />

        <ImageButton
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/icon_friend" />

        <ImageButton
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/icon_insert_emoticon" />

        <ImageButton
            android:contentDescription="@string/app_name"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/icon_location_on" />
    </LinearLayout>

    <include layout="@layout/layout_bottomsheet_create_post" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
