<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.PostTextDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--Thong tin bai viet-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="30dp">

                <ImageView
                    android:id="@+id/imageview_avatar_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/name"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textview_text_nickname_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/icon_more_horiz" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textview_time_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />
            </LinearLayout>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_display_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#CCCACA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_like"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableStart="@drawable/icon_like"
                android:paddingStart="35dp"
                android:paddingEnd="0dp"
                android:text="@string/like"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_comment"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableStart="@drawable/icon_comment"
                android:paddingStart="35dp"
                android:paddingEnd="0dp"
                android:text="@string/comment"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_share"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:drawableStart="@drawable/icon_share"
                android:paddingStart="35dp"
                android:paddingEnd="0dp"
                android:text="@string/share"
                android:textAllCaps="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#CCCACA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="30dp">

                <ImageView
                    android:id="@+id/imageview_avatar_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/name"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/edittext_input_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints="@string/name"
                android:background="@drawable/custom_edittext_comment"
                android:hint="@string/write_comment"
                android:inputType="text"
                android:padding="10dp" />

            <ImageButton
                android:id="@+id/imagebutton_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:src="@drawable/icon_open_gallery" />

            <ImageButton
                android:id="@+id/imagebutton_send_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/icon_send" />
        </LinearLayout>

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/imageview_display_image"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_list_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>